syntax = "proto3";
option go_package = "./;types";

service Hello {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomPayload) {}
    // signalling streamが切れると、そのユーザーはRoomからも抜けた扱いになる
    rpc Signalling (stream SignallingMessage) returns (stream SignallingMessage) {}
}

message CreateRoomRequest {}

message CreateRoomPayload {
    string room_id = 1;
}

message SignallingMessage {
    oneof body {
        SelfIntroduceMessage self_intro = 1;
        RoomInfoRequest room_info_request = 2;
        RoomInfoResponse room_info_response = 3;
        SdpMessage sdp_message = 4;
        IceCandidateMessage ice_message = 5;
    }
}

message RoomInfoRequest {}

message RoomInfoResponse {
    repeated string joined_user_ids = 1;
}

message SelfIntroduceMessage {
    string my_id = 1;
    string room_id = 2;
}

message SdpMessage {
    string session_description = 1;
    string from_id = 2;
    string to_id = 3;
}

message IceCandidateMessage {
    string ice_candidate = 1;
    string from_id = 2;
    string to_id = 3;
}
